# ishare-connect

./: .gitignore  Cargo.toml  README.md
src/: delegation_evidence.rs  delegation_request.rs  ishare.rs  lib.rs  main.rs  pdp.rs
