[package]
name = "ishare"
version = "0.2.3"
edition = "2021"
description = "Helps you connect within the ishare framework"
homepage = "https://github.com/LIFE-Electronic/ishare-connect"
repository = "https://github.com/LIFE-Electronic/ishare-connect"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
jsonwebtoken = "9.3.0"
openssl = { version = "0.10.64", features = ["vendored"] }
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v1", "v4", "serde"] }
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.115"
base64 = "0.22.1"
chrono = "0.4.38"
openssl-sys = "0.9.102"
anyhow = "1.0.86"
thiserror = "1.0.61"
reqwest-retry = "0.7.0"
reqwest-middleware = "0.4.0"
utoipa = "5.2.0"
